# amdgpu-pptable

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.rst  field.h  fieldeditorwidget.cpp  generate_ctypes.py  main.cpp  mainwindow.h  pyproject.toml  requirements.txt  setup.cfg  setup.py  table.cpp  tableeditorwidget.h  tox.ini  vega10powerplaytable.cpp
.github/workflows/: flake8.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  pythonapp.yml  test.yml
cli/: CMakeLists.txt  pptable-to-json.cpp
cmake/: MacOSXBundleInfo.plist.in
debian/: .gitignore  Dockerfile  build-in-docker.sh  control  docker-compose.yml  generate_changelog.py  generate_substvars.py  rules
gui/: CMakeLists.txt  fieldeditorwidget.h  mainwindow.cpp  tableeditorwidget.cpp
lib/: CMakeLists.txt  field.cpp  vega10powerplaytable.cpp
lib/include/: table.h  vega10powerplaytable.h
src/amdgpu_pptable/: dump.py  gui.py  pptable_v1_0.py  smu_v11_0_pptable_navi10.py  vega10_pptable.py  version_detect.py
tests/amdgpu_pptable/: rx580_pulse_pp_table  test_pptable_navi10.py  test_pptable_v1_0.py  test_vega10_pptable.py  test_version_detect.py  vega64_nitro_oc_pp_table
tests/amdgpu_pptable/5700xt_aorus/: pp_dpm_sclk  pp_od_clk_voltage  pp_table  sensors
tests/amdgpu_pptable/5700xt_gaming_x/: pp_dpm_sclk  pp_od_clk_voltage  pp_table  sensors
tests/amdgpu_pptable/5700xt_nitro_se/: pp_dpm_dcefclk  pp_dpm_mclk  pp_dpm_sclk  pp_table  sensors
